RESOLVED FIXED140437
REGRESSION(r178367): [GStreamer] Several media tests time out after r178367
https://bugs.webkit.org/show_bug.cgi?id=140437
Summary REGRESSION(r178367): [GStreamer] Several media tests time out after r178367
Attachments
Patch (2.00 KB, patch)
2015-01-14 03:45 PST, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2015-01-14 03:45:23 PST
Created attachment 244594 [details] Patch This fixes the timeouts for me, but I'm not sure it's the right fix
Philippe Normand
Comment 2 2015-01-14 03:52:05 PST
Comment on attachment 244594 [details] Patch Yes that looks sensibly good to me :) Thanks!
Carlos Garcia Campos
Comment 3 2015-01-14 03:54:56 PST
Note You need to log in before you can comment on or make changes to this bug.