REGRESSION(r178367): [GStreamer] Several media tests time out after r178367 https://bugs.webkit.org/show_bug.cgi?id=140437

Reviewed by Philippe Normand.

Add implementation for MediaPlayerPrivate::rate() to GStreamer
media backend.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::rate):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/158423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178418 268f45cc-cd09-0410-ab3c-d52691b4dbfc